# lp-cranelift

./: .cursorrules  .gitignore  BUILD_ISSUE_MINIMAL_LEXICAL.md  Cargo.toml  EMBIVE_DEMO.md  ESP32C6_CODEGEN_ANALYSIS.md  ESP32C6_SIZE_ANALYSIS.md  ESP32C6_SIZE_RESULTS.md  ESP32C6_SIZE_SUMMARY.md  HOW_TO_TRACE_SIZE.md  QUICK_SIZE_GUIDE.md  README.md  SIZE_ANALYSIS.md  SIZE_OPTIMIZATION_INDEX.md  analyze-esp32c6-size.sh  analyze-size.sh  mod.d  show-compiled-crates.sh  test-popcnt.clif  test-single.clif  test_decode.rs  trace-compiled-files.sh
apps/embive-program/: Cargo.toml  DEMO_SUCCESS.md  README.md  STATUS.md  build.rs  memory.ld  test.sh
apps/embive-program/src/: main.rs  toy_demo.rs
apps/esp32c3-jit-test/: Cargo.toml  README.md
apps/esp32c3-jit-test/src/: main.rs
apps/esp32c6-glsl-jit/: Cargo.toml  README.md
apps/esp32c6-glsl-jit/src/: main.rs
apps/test-structreturn/: Cargo.toml
apps/test-structreturn/src/: main.rs
cranelift/jit/: Cargo.toml
cranelift/jit/src/: backend.rs  compiled_blob.rs  lib.rs
crates/lp-filetests/: Cargo.toml  README.md
crates/lp-filetests/src/: compile.rs  filecheck.rs  lib.rs  parser.rs  test_cat.rs  test_cfg.rs  test_compile.rs  test_domtree.rs  test_instruction.rs  test_toy.rs  test_transform.rs  test_verifier.rs
crates/lp-glsl/: Cargo.toml  README.md
crates/lp-glsl-filetests/: Cargo.toml  README.md
crates/lp-glsl-filetests/src/: file_update.rs  filetest.rs  lib.rs  test_compile.rs  test_error.rs  test_riscv32_fixed32.rs  test_run.rs
crates/lp-glsl-filetests/tests/: filetests.rs
crates/lp-glsl/examples/: simple.rs
crates/lp-glsl/src/: clif_module.rs  compile.rs  compiler.rs  error.rs  executable.rs  executable_emu.rs  executable_jit.rs  glsl_compiler.rs  jit.rs  lib.rs  pipeline.rs
crates/lp-glsl/tests/: emulator_test.rs  filetest.rs  jit_test.rs  runtime_bool.rs  runtime_fixed_point.rs  runtime_int.rs
crates/lp-riscv-shared/: Cargo.toml
crates/lp-riscv-shared/src/: lib.rs  simple_elf.rs
crates/lp-riscv-tools/: Cargo.toml  FEATURE_MATRIX.md
crates/lp-riscv-tools/src/: asm_parser.rs  auipc_imm.rs  decode.rs  decode_rvc.rs  disasm.rs  elf_loader.rs  encode.rs  format.rs  inst.rs  inst_buffer.rs  lib.rs  regs.rs
crates/lp-riscv-tools/tests/: riscv_nostd_test.rs
crates/lp-toy-lang/: Cargo.toml
crates/lp-toy-lang/src/: executor.rs  frontend.rs  jit.rs  lib.rs  translator.rs
crates/lp-toy-lang/tests/: host_compile_test.rs  nostd_codepath_test.rs
lightplayer/apps/esp32c3-jit-test/: Cargo.toml
lightplayer/apps/lp-builtins-app/: Cargo.toml  README.md  build.rs  memory.ld
lightplayer/apps/lp-test/: Cargo.toml
lightplayer/crates/lp-builtins/: Cargo.toml  README.md  build.rs
lightplayer/crates/lp-filetests-gen/: Cargo.toml
lightplayer/crates/lp-glsl/: .gitignore  Cargo.toml  build.rs
lightplayer/crates/lp-glsl-builtins-tool/: Cargo.toml
lightplayer/crates/lp-glsl-compiler/: Cargo.toml  build.rs
lightplayer/crates/lp-glsl-filetests/: Cargo.toml  README.md
lightplayer/crates/lp-riscv-shared/: Cargo.toml
lightplayer/crates/lp-riscv-tools/: Cargo.toml
lp-app/: Cargo.toml  README.md
lp-app/apps/fw-host/: Cargo.toml  project.json
lp-app/apps/lp-cli/: Cargo.toml  README.md
lp-app/apps/lp-core-cli/: Cargo.toml
lp-app/crates/lp-api/: Cargo.toml  README.md
lp-app/crates/lp-client/: Cargo.toml
lp-app/crates/lp-core/: Cargo.toml  README.md
lp-app/crates/lp-core-util/: Cargo.toml  README.md
lp-app/crates/lp-engine/: Cargo.toml  README.md
lp-app/crates/lp-engine-client/: Cargo.toml
lp-app/crates/lp-model/: Cargo.toml  README.md
lp-app/crates/lp-server/: Cargo.toml  README.md
lp-app/crates/lp-shared/: Cargo.toml  README.md
lp-app/docs/: 2026-01-10-engine-refactor-yona-notes.md
lp-app/docs/process/: design-example.md  design-process.md  plan-example.md  plan-process.md
lp-app/plans/: 00-todo.md
lp-app/plans/2026-01-11-engine-core-model/: 00-implementation-questions.md  00-overview.md  00-phases.md  01-lp-model-core-types.md  03-lp-engine-project-loading.md  04-lp-engine-node-runtime-traits.md  05-lp-engine-basic-node-runtimes.md  09-lp-engine-client-view.md  10-end-to-end-test.md
lp-app/plans/2026-01-15-dev-ui/: 00-design.md  00-overview.md  01-extend-texture-state.md  02-extend-fixture-state.md  09-add-headless-flag.md  10-cleanup-finalization.md
lp-app/plans/2026-01-15-dev-ui-sync-fix/: 00-design.md  00-overview.md  00-plans-notes.md  01-refactor-asynclpclient-transport.md  02-add-handles-to-fixture-state.md  05-cleanup-finalization.md
lp-app/plans/2026-01-16-dev-architecture-refactor/: 00-design.md  00-overview.md  00-plans-notes.md  01-extend-clienttransport-trait.md  02-create-localservertransport.md  03-create-client-connect.md  04-create-asynclienttransport.md  07-create-fs-loop.md  09-add-tests.md
lp-app/plans/2026-01-19-fs-version-tracking/: 01-create-fsversion.md  02-add-lpfs-methods.md  03-implement-lpfmemory.md  04-implement-lpfstd.md  06-add-project-version.md  08-update-fs-loop.md  09-cleanup-finalization.md
lp-app/plans/2026-01-19-lp-client-cleanup/: 00-overview.md  00-plans-notes.md  04-update-call-sites.md  05-fix-transport-implementations.md
lp-app/plans/2026-01-19-lppath-enhancement/: 00-design.md  00-overview.md  00-plans-notes.md  01-enhance-lppath-core.md  03-update-runtime-rs.md  04-update-server-rs.md  06-add-tests-cleanup.md
lp-app/plans/2026-01-20-filesystem-watching/: 00-overview.md  00-plans-notes.md
lp-app/plans/2026-01-20-lpfs-lppath/: 00-design.md  00-overview.md  00-plans-notes.md  01-create-lppath-slice-type.md  02-move-methods-to-lppath.md  03-implement-deref.md  04-update-lpfs-trait.md  05-remove-normalize-functions.md  06-update-lpfs-implementations.md  07-update-call-sites-lp-shared.md  08-update-call-sites-lp-server.md  09-update-call-sites-lp-engine.md  10-update-call-sites-client-cli.md  11-cleanup-finalization.md
lp-app/plans/26-01-13-runtime-implementation/: 00-design.md  00-phases.md  00-questions.md  08-tests-cleanup.md  (+5 more)
lp-glsl/: Cargo.toml  README.md
lp-glsl/plans/: _todo.md  process-design.md  process-long.md
(+3673 files in other folders)
