[workspace]
resolver = '2'
members = [
    "crates/lp-builtins",
    "../lp-app/crates/lp-engine",
    "crates/lp-filetests-gen",
    "crates/lp-glsl-compiler",
    "crates/lp-glsl-filetests",
    "crates/lp-jit-util",
    "crates/lp-riscv-shared",
    "crates/lp-riscv-tools",
    "apps/embive-program",
    "apps/esp32-glsl-jit",
    "../lp-app/apps/lp-core-cli",
    "apps/lp-builtin-gen",
    "apps/lp-builtins-app",
    "apps/lp-test",
    "apps/test-structreturn",
]

[workspace.package]
version = "40.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"
rust-version = "1.90.0"

[workspace.lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

[workspace.lints.clippy]
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
uninlined_format_args = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
useless_conversion = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'
from_over_into = 'warn'
redundant_field_names = 'warn'
multiple_bound_locations = 'warn'
extra_unused_type_parameters = 'warn'

[workspace.dependencies]
# Cranelift crates - reference parent workspace
cranelift-codegen = { path = "../cranelift/codegen", version = "0.127.0", default-features = false }
cranelift-frontend = { path = "../cranelift/frontend", version = "0.127.0", default-features = false }
cranelift-module = { path = "../cranelift/module", version = "0.127.0", default-features = false }
cranelift-jit = { path = "../cranelift/jit", version = "0.127.0", default-features = false }
cranelift-native = { path = "../cranelift/native", version = "0.127.0" }
cranelift-object = { path = "../cranelift/object", version = "0.127.0" }
cranelift-reader = { path = "../cranelift/reader", version = "0.127.0" }
cranelift-control = { path = "../cranelift/control", version = "0.127.0", default-features = false }

# Common dependencies
target-lexicon = "0.13.0"
hashbrown = { version = "0.15", default-features = false, features = ["alloc", "default-hasher"] }
anyhow = { version = "1.0.100", default-features = false }
regex = "1.9.1"
glob = "0.3.3"
object = { version = "0.37.3", default-features = false, features = ['read_core', 'elf'] }
critical-section = { version = "1.2.0", default-features = false, features = ["restore-state-u32"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.80", default-features = false, features = ["alloc"] }

# Note: ESP32-C3 supports atomic CAS, so portable-atomic's unsafe-assume-single-core
# feature should not be enabled. If esp-hal enables it incorrectly, this may be
# a bug in esp-hal v1.0.0-rc.0 that needs to be reported upstream.

[profile.release]
# Link-time optimization for all release builds - saves ~100-300 KB
# This applies to all packages in the workspace
lto = true

[profile.release.package.esp32-glsl-jit]
# Size optimizations for embedded target (ESP32-C3)
# Strip debuginfo but keep symbols (needed for defmt/probe-rs) - saves ~1-1.5 MB
strip = "debuginfo"
# Optimize for size instead of speed - saves ~200-500 KB
opt-level = "z"
# Single codegen unit for better dead code elimination - saves ~50-100 KB
codegen-units = 1

