[package]
name = "embive-program"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "embive-program"
path = "src/main.rs"
test = false

[dependencies]
runtime-embive = { path = "../../crates/runtime-embive" }

[build-dependencies]

[target.riscv32imac-unknown-none-elf]


