[package]
name = "embive-program"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "embive-program"
path = "src/main.rs"
test = false

[dependencies]
runtime-embive = { path = "../../crates/runtime-embive" }
lp-toy-lang = { path = "../../crates/lp-toy-lang", default-features = false, features = ["core", "cranelift"] }

# Cranelift for runtime JIT - carefully configured for no_std, riscv32 only
cranelift-codegen = { path = "../../cranelift/codegen", default-features = false, features = ["riscv32"] }
cranelift-frontend = { path = "../../cranelift/frontend", default-features = false, features = ["core"] }
target-lexicon = { version = "0.13.0", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["alloc", "default-hasher"] }

[build-dependencies]

[target.riscv32imac-unknown-none-elf]


