[package]
name = "esp32c3-jit-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "esp32c3-jit-test"
path = "src/main.rs"
test = false

[dependencies]
# Toy language for JIT compilation
lp-toy-lang = { path = "../../crates/lp-toy-lang", default-features = false, features = ["core", "cranelift"] }

# Cranelift for JIT compilation on ESP32-C3/C6 (RISC-V32)
cranelift-codegen = { path = "../../cranelift/codegen", default-features = false, features = ["riscv32"] }
cranelift-frontend = { path = "../../cranelift/frontend", default-features = false, features = ["core"] }
cranelift-control = { path = "../../cranelift/control", default-features = false }
target-lexicon = { version = "0.13.0", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["alloc", "default-hasher"] }

# ESP32-C6 HAL and runtime
esp-hal = { version = "=1.0.0-rc.0", features = ["defmt", "esp32c6", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32c6"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
defmt = "1.0.1"
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
critical-section = "1.2.0"

# Disable unsafe-assume-single-core feature for portable-atomic
# ESP32-C6 supports atomic CAS, so this feature is incompatible
[dependencies.portable-atomic]
version = "1.11"
default-features = false

