[package]
name = "lp-filetests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Cranelift dependencies for testing riscv32 backend
cranelift-codegen = { workspace = true, features = ["riscv32", "std"] }
cranelift-frontend = { workspace = true }
cranelift-reader = { workspace = true }
cranelift-filetests = { workspace = true }

# LP-specific dependencies
lp-riscv-tools = { path = "../lp-riscv-tools" }
lp-toy-lang = { path = "../lp-toy-lang" }

# Testing utilities
filecheck = { workspace = true }
