[package]
name = "lp-filetests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Cranelift dependencies for compiling and testing RISC-V32 backend
cranelift-codegen = { workspace = true, features = ["riscv32", "std"] }
cranelift-control = { workspace = true }
cranelift-reader = { workspace = true }

# LP-specific dependencies
lp-riscv-tools = { path = "../lp-riscv-tools" }

# Testing utilities
filecheck = { workspace = true }
