[package]
name = "lp-glsl-filetests"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
lp-glsl = { path = "../lp-glsl", features = ["std"] }
anyhow = { workspace = true }
filecheck = { workspace = true }

[[test]]
name = "filetests"
harness = true

