[package]
name = "lp-glsl-filetests"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
lp-glsl = { path = "../lp-glsl", features = ["std"] }
lp-riscv-tools = { path = "../lp-riscv-tools", features = ["std"] }
anyhow = { workspace = true }
cranelift-codegen = { workspace = true }
target-lexicon = { workspace = true }

[[test]]
name = "filetests"
harness = true

