[package]
name = "lp-glsl"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
glsl = { path = "/Users/yona/dev/photomancer/glsl-parser/glsl", default-features = false }
cranelift-frontend = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true, optional = true }
hashbrown = { workspace = true }

[features]
default = ["std"]
std = [
    "glsl/std",
    "cranelift-codegen/std",
    "cranelift-jit",
    "cranelift-native"
]
core = ["cranelift-codegen/core"]

[dev-dependencies]
cranelift-reader = { workspace = true }

