[package]
name = "lp-glsl"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
glsl = { git = "https://github.com/Yona-Appletree/glsl-parser.git", branch = "feature/spans", default-features = false }
cranelift-frontend = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true, optional = true }
hashbrown = { workspace = true }
target-lexicon = { workspace = true }

[features]
default = ["std"]
std = [
    "glsl/std",
    "cranelift-codegen/std",
    "cranelift-frontend/std",
    "cranelift-module/std",
    "cranelift-jit",
    "cranelift-jit/std",
    "cranelift-native"
]
core = [
    "cranelift-codegen/core",
    "cranelift-frontend/core",
    "cranelift-module/core"
]

[dev-dependencies]
cranelift-reader = { workspace = true }

