[package]
name = "lp-riscv-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared code for RISC-V JIT testing using Cranelift"

[lib]

[dependencies]
lp-toy-lang = { path = "../lp-toy-lang" }
cranelift-codegen = { path = "../../cranelift/codegen", default-features = false, features = ["riscv32", "unwind"] }
cranelift-frontend = { path = "../../cranelift/frontend", default-features = false }
target-lexicon = { version = "0.13.0", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["alloc", "default-hasher"] }

[features]
std = []

