[package]
name = "lp-toy-lang"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cranelift-frontend = { workspace = true, optional = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
nom = { version = "7", default-features = false, features = ["alloc"] }

# For no_std HashMap support
hashbrown = { workspace = true, optional = true }

# Optional: keep for potential RISC-V target use
lp-riscv-tools = { path = "../lp-riscv-tools", optional = true }

[features]
default = ["std"]

# Full std support with native ISA detection
std = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-jit",
    "cranelift-module",
    "cranelift-codegen/std",
    "cranelift-frontend/std",
    "cranelift-jit/std",
    "cranelift-module/std",
    "cranelift-native",
]

# For testing specific ISAs
riscv32 = ["cranelift-codegen/riscv32"]

# Core no_std support - only frontend parsing, no JIT
core = [
    "hashbrown",
]

# For apps that need cranelift with JIT in no_std (like embive-program)
cranelift = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-jit",
    "cranelift-module",
    "cranelift-frontend/core",
    "cranelift-jit/core",
    "cranelift-module/core",
    "hashbrown",
]

# RISC-V emulator support (optional)
riscv-emu = ["lp-riscv-tools"]

[[bin]]
name = "toy"
path = "src/bin/toy.rs"
required-features = ["std"]

[dev-dependencies]
target-lexicon = { version = "0.13.0", default-features = false }
hashbrown = { workspace = true }
