[package]
name = "esp32c3-jit-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "esp32c3-jit-test"
path = "src/main.rs"
test = false

[dependencies]
# Cranelift for JIT compilation on ESP32-C3/C6 (RISC-V32)
cranelift-codegen = { workspace = true, features = ["riscv32"] }
cranelift-frontend = { workspace = true, features = ["core"] }
cranelift-control = { workspace = true }
target-lexicon = { workspace = true }
hashbrown = { workspace = true }

# ESP32-C6 HAL and runtime
esp-hal = { version = "=1.0.0-rc.0", features = ["defmt", "esp32c6", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32c6"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
defmt = "1.0.1"
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
critical-section = "1.2.0"

# Disable unsafe-assume-single-core feature for portable-atomic
# ESP32-C6 supports atomic CAS, so this feature is incompatible
[dependencies.portable-atomic]
version = "1.11"
default-features = false

