[package]
name = "lp-builtins-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lp-builtins-app"
path = "src/main.rs"
test = false

[dependencies]
lp-builtins = { path = "../../crates/lp-builtins", features = ["baremetal"] }

[build-dependencies]

[target.riscv32imac-unknown-none-elf]

