[package]
name = "lp-builtins-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lp-builtins-app"
path = "src/main.rs"
test = false

[features]
# Optional features for macro compatibility (never enabled, just declared to avoid cfg warnings)
std = []
test = []

[dependencies]
lp-builtins = { path = "../../crates/lp-builtins" }

[build-dependencies]

