[package]
name = "lp-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for running lp-glsl-compiler filetests"
publish = false

[lints]
workspace = true

[[bin]]
name = "lp-test"
path = "src/main.rs"

[dependencies]
lp-glsl-filetests = { path = "../../crates/lp-glsl-filetests" }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
