[package]
name = "lp-builtins"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[[bin]]
name = "lp-builtins"
path = "src/main.rs"
required-features = ["std"]

[features]
default = []
std = []

[dependencies]

