[package]
name = "lp-filetests-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generator for lp-glsl-compiler vector and matrix test files"
publish = false

[lints]
workspace = true

[[bin]]
name = "lp-filetests-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
walkdir = "2.4"

