[package]
name = "lp-glsl-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
glsl = { git = "https://github.com/Yona-Appletree/glsl-parser.git", branch = "feature/spans", default-features = false }
cranelift-frontend = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-control = { workspace = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true, optional = true }
cranelift-object = { workspace = true, optional = true }
cranelift-reader = { workspace = true, optional = true }
hashbrown = { workspace = true }
object = { workspace = true, optional = true }
target-lexicon = { workspace = true }
lp-jit-util = { path = "../lp-jit-util", default-features = false }
lp-riscv-tools = { path = "../lp-riscv-tools", optional = true, features = ["std"] }
lp-builtins = { path = "../lp-builtins" }
anyhow = { workspace = true, optional = true }

[features]
default = ["std"]
emulator = ["lp-riscv-tools", "cranelift-object", "object", "cranelift-codegen/disas"]  # Enable RISC-V 32-bit emulator support and disassembly
std = [
    "glsl/std",
    "cranelift-codegen/std",
    "cranelift-codegen/host-arch",
    "cranelift-frontend/std",
    "cranelift-module/std",
    "cranelift-jit",
    "cranelift-jit/std",
    "cranelift-native",
    "cranelift-reader",
    "anyhow",
    "lp-builtins/std"
]
core = [
    "cranelift-codegen/core",
    "cranelift-frontend/core",
    "cranelift-module/core",
    "cranelift-jit"  # JITModule supports no_std
]

[dev-dependencies]
cranelift-reader = { workspace = true }
cranelift-interpreter = { path = "../../../cranelift/interpreter" }

