[package]
name = "lp-riscv-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared code for RISC-V JIT testing using Cranelift"

[lib]

[dependencies]
cranelift-codegen = { workspace = true, features = ["riscv32", "unwind"] }
cranelift-frontend = { workspace = true }
target-lexicon = { workspace = true }
hashbrown = { workspace = true }

[features]
std = []

