[package]
name = "lp-riscv-tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
description = "RISC-V 32-bit emulator and instruction utilities for Light Player"

[lints]
workspace = true

[dependencies]
# Use hashbrown for no_std HashMap support
hashbrown = { workspace = true }
nom = { version = "7", default-features = false, features = ["alloc"] }

# For ABI integration and DataValue types
cranelift-codegen = { workspace = true, features = ["riscv32"] }

# For examples only
cranelift-frontend = { workspace = true, optional = true }

# For ELF loading (std only)
elf = { version = "0.7", optional = true }
object = { version = "0.37.3", optional = true, features = ["write"] }

[features]
std = ["dep:cranelift-frontend", "cranelift-frontend/std", "dep:elf", "dep:object"]

[dev-dependencies]
cranelift-object = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module = { workspace = true }
target-lexicon = "0.13"

[[example]]
name = "simple_codegen"
required-features = ["std"]

