[package]
name = "lp-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lp-model = { path = "../../crates/lp-model" }
lp-server = { path = "../../crates/lp-server" }
lp-client = { path = "../../crates/lp-client" }
lp-shared = { path = "../../crates/lp-shared" }

[lints]
workspace = true
