[package]
name = "lp-core-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lp-core-cli"
path = "src/main.rs"

[dependencies]
log = "0.4"
lp-engine = { path = "../../crates/lp-engine" }
lp-shared = { path = "../../crates/lp-shared", default-features = false, features = ["std"] }
lp-server = { path = "../../crates/lp-server", default-features = false, features = ["std"] }
eframe = "0.28"
egui = "0.28"
serde_json = "1.0"
hashbrown = { version = "0.15", default-features = false, features = ["alloc", "default-hasher"] }
notify = "6.1"

[dev-dependencies]
tempfile = "3.8"

