[package]
name = "lp-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lp-model = { path = "../lp-model", default-features = false }
lp-server = { path = "../lp-server", default-features = false }
lp-shared = { path = "../lp-shared", default-features = false }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
hashbrown = { workspace = true }

[features]
default = []
std = []

[lints]
workspace = true
