[package]
name = "lp-core-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
log = { version = "0.4", default-features = false }
hashbrown = { workspace = true }

[lints]
workspace = true
